Finishing transliteration and citation references.

--- a/tafaseer_group/03_results/paper.bib
+++ b/tafaseer_group/03_results/paper.bib
@@ -134,4 +134,42 @@
   options = {useprefix=true}
 }
 
+@book{jackson1996,
+  location = {{Leiden}},
+  title = {Islamic Law and the State. {{The}} Constitutional Jurisprudence of {{Shihāb}} Al-{{Dīn}} Al-{{Qarāfī}}.},
+  publisher = {{E. J. Brill}},
+  author = {Jackson, Sherman},
+  date = {1996}
+}
+
+@inreference{eb_alsuyuti,
+  title = {Al-{{Suyuti}}},
+  booktitle = {Encyclopedia {{Britannica Online}}},
+  author = {{The Editors of Encyclopædia Britannica}},
+  date = {2007-05-16}
+}
+
+@inreference{mic_alsuyuti,
+  title = {Suyuti, {{Al}}-, {{Abd}} Al-{{Rahman}}},
+  booktitle = {Medieval {{Islamic Civilization}}. {{An Encyclopedia}}.},
+  publisher = {{Routledge}},
+  author = {Meri, Josef W.},
+  date = {2005},
+  pages = {784--786}
+}
+
+@book{brannonm.wheeler:prophets:2002,
+  location = {{London}},
+  title = {Prophets in the {{Quran}}. {{An}} Introduction to the {{Quran}} and {{Muslim}} Exegesis.},
+  publisher = {{Continuum}},
+  author = {{Brannon M. Wheeler}},
+  date = {2002}
+}
+
+@inreference{wikipedia_listofairlinecodes,
+  title = {Liste Des Compagnies Aériennes Par Pays},
+  booktitle = Wikipedia,
+  date = {2011}
+}
+
 
