--- a/tafaseer_group/03_results/paper.rmd
+++ b/tafaseer_group/03_results/paper.rmd
@@ -20,11 +20,11 @@ csl: aethiopistische-forschungen.csl
 
 # 1 Introduction
 
-How has Islamic interpretation of the Quran changed over time? Have certain sections of the Quran enjoyed more attention from religious scholars and if so, has preference shifted with time? Does geographic distance equate to divergent preference for scholars who are contemporaneous to one another? Is doctrinal affiliation the primary factor in a *mufassir* (Islamic exegete) giving a section of the Quran more consideration? To answer these questions, we sought out exegetical works that were in a manageable and navigable digital format.
+How has islamic interpretation of the Quran changed over time? Have certain sections of the Quran enjoyed more attention from religious scholars and if so, has preference shifted with time? Does geographic distance equate to divergent preference for scholars who are contemporaneous to one another? Is doctrinal affiliation the primary factor in a *mufassir* (islamic exegete) giving a section of the Quran more consideration? To answer these questions, we sought out exegetical works that were in a manageable and navigable digital format.
 
 ## 1.1 A note on transliteration
 
-The transliteration system used is that of the German Oriental Society[^dmg_url]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names); for the inconsistencies (i.e., vowelisation was sometimes added where it helps the flow of pronounciation, etc.) that remain we ask the reader's digression. As regards to diphtongs we have opted towards the variant employing the combination of consonant-plus-vowel which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were transliterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if belonging to a group of other Arabic words.
+The transliteration system used is that of the German Oriental Society[^dmg_url]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names). For the inconsistencies that remain[^inconsistencies] we ask the reader's digression. As regards diphtongs we have opted towards the variant employing the combination of consonant plus vowel which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were transliterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if belonging to a group of other Arabic words.
 
 [^dmg_url]: [http://www.dmg-web.de/](http://www.dmg-web.de/)
 
@@ -32,15 +32,17 @@ The transliteration system used is that of the German Oriental Society[^dmg_url]
 
 [^englishwords]: Such as Quran, Sunni, Shia, Fatimid, etc.
 
+[^inconsistencies]: Mostly, vowelisation was sometimes added where it helps the flow of pronounciation.
+
 ## 1.2 A technical note regarding this document
 
 The present document was prepared using the `rmarkdown` package and consequently `knitr`'s built-in devices are being used to include the source code relevant to this study in the appendix. Unfortunately, the underlying libraries have not yet evolved to a point where they knows how to properly break-around longer lines as they often appear in source code files. The reader is kindly asked to open the source code files directly from the GitHub repository where they are being kept[^github] if she wishes to read them in detail. Towards that end, the appendix subheadings provide direct links to the respective files displayed beneath them.
 
-[^github]: [https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group)
+[^github]: [https://github.com/islamicate-DH/hw/tree/master/tafaseer_group](https://github.com/islamicate-DH/hw/tree/master/tafaseer_group)
 
 # 2 The corpus
 
-As part of an effort to make Islamic scholarship more accessible, the Jordanian-based *Royal Aal al-Bayt Institute for Islamic Thought* commissioned the creation of [altafsir.com](altafsir.com), an online repository of classical works of *tafsīr*. The format of the website allows a user to select a specific *āya* (verse from the Quran) and see the relevant section of *tafsīr* that provides commentary on the *āya*. This structure, along with the fact that the texts are typed in and not photos of scanned pages, made the website ideal for our research which required that the texts be in a digital format and segmented according to the verse that is being commented on. The ultimate goal of [altafsir.com](altafsir.com) is to provide a diverse collection of texts originating from various traditions, sects, and schools of jurisprudence. That desired breadth has yet to be achieved. The website currently has seventeen complete tafāsīr that were all written by *sunnī* (one of the major two sects of Islam) scholars.
+As part of an effort to make islamic scholarship more accessible, the Jordanian-based *Royal Aal al-Bayt Institute for islamic Thought* commissioned the creation of [altafsir.com](altafsir.com), an online repository of classical works of *tafsīr*. The format of the website allows a user to select a specific *āya* (verse from the Quran) and see the relevant section of *tafsīr* that provides commentary on the *āya*. This structure, along with the fact that the texts are typed in and not photos of scanned pages, made the website ideal for our research which required that the texts be in a digital format and segmented according to the verse that is being commented on. The ultimate goal of [altafsir.com](altafsir.com) is to provide a diverse collection of texts originating from various traditions, sects, and schools of jurisprudence. That desired breadth has yet to be achieved. The website currently has seventeen complete tafāsīr that were all written by *sunnī* (one of the major two sects of Islam) scholars.
 
 ## 2.1 The tafāsīr
 
@@ -60,7 +62,7 @@ The following *tafāsīr* which ended up being the subject of this document are 
 * *mafātīḥ al-ġayb* by *ar-Rāzī*
 * *tafsīr al-ǧalālayn* by *al-Maḥallī* and *as-Suyūṭī*
 * *tafsīr al-qurʾān* by *al-Fayrūzābādī*
-* *tafsīr al-qurʾān* by *Ibn ʿAbdi-s-Salām*
+* *tafsīr al-qurʾān* by *Ibn ʿAbd as-Salām*
 * *tafsīr al-qurʾān al-karīm* by *Ibn Kaṯīr*
 * *zād al-masīr fī ʿilm at-tafsīr* by *Ibnu-l-Ǧawzī*
 
@@ -90,9 +92,9 @@ Gephi's algorithm calculated four distinct groups, represented as colors in figu
 1. Green: *Ibnu-l-Ǧawzī* (d. 597 AH), *aṭ-Ṭabarī* (d. 310 AH), *Ibn Kaṯīr* (d. 774 AH), *Ibn ʿAṭīya* (d. 546 AH), and *al-Baġawī* (d. 516 AH)
 2. Blue: *az-Zamaḫšarī* (d. 538 AH), *al-Bayḍāwī* (d. 685 AH), and *an-Nasafī* (d. 710 AH)
 3. Purple: *ar-Rāzī* (d. 606 AH), *al-Fayrūzābādī* (d. 817 AH), *al-Qurṭubī* (d. 671 AH), *al-Ḫāzin* (d. 741 AH), and *Abū Ḥayyān* (d. 754 AH)
-4. Orange: *al-Maḥallī* (d. 864 AH) and *as-Suyūṭī* (d. 911 AH), *as-Samarqandī* (d. 375 AH), *al-Māwardī* (d. 450 AH), and *Ibn ʿAbdi-s-Salām* (d. 660 AH)
+4. Orange: *al-Maḥallī* (d. 864 AH) and *as-Suyūṭī* (d. 911 AH), *as-Samarqandī* (d. 375 AH), *al-Māwardī* (d. 450 AH), and *Ibn ʿAbd as-Salām* (d. 660 AH)
 
-The unifying characteristic for the exegetes of the first cluster is their reputation as traditionalists. *Aṭ-Ṭabarī* saw his method of *tafsīr bi-l-maṯūr*, or exclusive reliance on Hadith in matters of Quranic interpretation, as essential to avoid the introduction of *bidʿa* or heretical innovation (@bauer2013). *Al-Baġawī* emphasized the importance of purity in Islamic doctrine and worked to exclude teachings that he believed could not be properly attributed to Muḥammad or the *ṣaḥāba*, the companions of Muḥammad (@ei_albaghawi). *Ḥanbalī* adherent *Ibnu-l-Ǧawzī* campaigned against the Shia in Iraq and authored a paean[^paean] celebrating the end of *ismaʿīlī* Fatimid rule in Egypt and the accession of a Sunni, *Ṣalāḥ ad-Dīn*, to power (@mallett). *Ibn ʿAṭīya*'s exegesis received praise from *Ibn Taimīya*, the intellectual forefather of movements that are frequently labeled as Salafist, for its adherence to orthodoxy (@salahi2002). The inclusion of *Ibn Taimīya*'s student *Ibn Kaṯīr* can be attributed to either his conservative leanings—he penned a defense of armed Jihad against neighboring non-Muslim states (@ei_ibnkathir)—or to his *tafsīr* being, as some scholars have observed, a summarized version of *aṭ-Ṭabarī* (@mcauliffe1991).
+The unifying characteristic for the exegetes of the first cluster is their reputation as traditionalists. *Aṭ-Ṭabarī* saw his method of *tafsīr bi-l-maṯūr*, or exclusive reliance on Hadith in matters of Quranic interpretation, as essential to avoid the introduction of *bidʿa* or heretical innovation (@bauer2013). *Al-Baġawī* emphasized the importance of purity in islamic doctrine and worked to exclude teachings that he believed could not be properly attributed to Muḥammad or the *ṣaḥāba*, the companions of Muḥammad (@ei_albaghawi). *Ḥanbalī* adherent *Ibnu-l-Ǧawzī* campaigned against the Shia in Iraq and authored a paean[^paean] celebrating the end of *ismaʿīlī* Fatimid rule in Egypt and the accession of a Sunni, *Ṣalāḥ ad-Dīn*, to power (@mallett). *Ibn ʿAṭīya*'s exegesis received praise from *Ibn Taimīya*, the intellectual forefather of movements that are frequently labeled as Salafist, for its adherence to orthodoxy (@salahi2002). The inclusion of *Ibn Taimīya*'s student *Ibn Kaṯīr* can be attributed to either his conservative leanings—he penned a defense of armed Jihad against neighboring non-Muslim states (@ei_ibnkathir)—or to his *tafsīr* being, as some scholars have observed, a summarized version of *aṭ-Ṭabarī* (@mcauliffe1991).
 
 [^paean]: "[A] song, film, or piece of writing that praises someone or something very enthusiastically:" (Cambridge Dictionary of English)
 
@@ -102,26 +104,22 @@ If there is a latent, unifying factor to the *mufassirūn* of the third cluster,
 
 The last cluster of our analysis resulted in a predictable grouping of exegetes. The primary characteristic that unified these authors was their choice of school of jurisprudence. Although these exegetes were all from different time periods and, for the most part, varying geographical locations the analogous school of thought when approaching the interpretations of the Quran was similar enough to differentiate this group from the rest of our corpus. Amongst the four authors in this cluster three were from the school of *aš-šāfiʿī* and one from the school of *al-ḥanafī*.
 
-*Al-Māwardī* was an Islamic jurist born in Basra, Iraq during 364AH (@ei_almawardi). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where *al-Māwardī* lived were known to be hubs of the *muʿtazila* school of thought, so some found it peculiar that the chief *qādī* of Baghdad (known hub of *muʿtazila* jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his *muʿtazila* sympathies. *Al-Māwardī* was known for his works in islamic legal principles, in fact in 429 AH the caliph *al-Qādir* summoned four jurists from each school of jurisprudence to write a legal epitome. (@ei_almawardi) *Al-Māwardī* was chosen to represent the school of šāfiʿī. Amongst the four jurists the Caliph favored *al-Māwardī* and appointed him chief Imam. (@ei_almawardi)
+*Al-Māwardī* was an islamic jurist born in Basra, Iraq during 364 AH (@ei_almawardi). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where *al-Māwardī* lived were known to be hubs of the *muʿtazila* school of thought, so some found it peculiar that the chief *qādī* of Baghdad (known hub of *muʿtazila* jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his *muʿtazila* sympathies. *Al-Māwardī* was known for his works in islamic legal principles, in fact in 429 AH the caliph *al-Qādir* summoned four jurists from each school of jurisprudence to write a legal epitome (@ei_almawardi). *Al-Māwardī* was chosen to represent the school of šāfiʿī. Amongst the four jurists the Caliph favored *al-Māwardī* and appointed him chief Imam (@ei_almawardi).
 
-Along with the school of jurisprudence a common factor amongst most of the authors was their interest in or relation to Islamic law.
+Along with the school of jurisprudence a common factor amongst most of the authors was their interest in or relation to islamic law.
 
-TODO: DMGize, mark citations
+3.2 Remarks on noteworthy authors of works in the corpus
 
-Ibn 'Abd al-Salam was born in Damascus in year 577AH(Salahi) much after Abu al-Layth Al Samarqandi and *al-Māwardī*. During his time he was the leading authority in the šāfiʿī Jurisprudence and most famous for his interpretations of Islamic legal principles. Unlike al mawari ,Abd al-Salam was known to be defiant of customs he deemed “unsanctioned”. He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus As-Salih Ismail.(Jackson, 1996) This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt. (Salahi) Like *al-Māwardī*, Al- Salam was a world renowned scholar of fatwas. Al-salam was so respected, islamic jurist like al-Hafiz al-Mundhiri stopped giving fatwas stating "It does not behove any jurist to give a fatwa where Izz al-Din(Ibn 'Abd al-Salam) happens to be present."(Salahi) Both Ibn 'Abd al-Salam and *al-Māwardī* were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to their respected islamic governments of their time,(Jackson, 1996) another factor which may have attributed to the groups of these authors in the same cluster. 
+*ʿIzz ad-Dīn ibn ʿAbd as-Salām* was born in Damascus in the year 577 AH (@salahi2016), long after *as-Samarqandī* and *al-Māwardī*. During his time he was the leading authority in the *šāfiʿī* jurisprudence and most famous for his interpretations of islamic legal principles. Unlike *al-Māwardī*, *ʿAbd as-Salām* was known to be defiant of customs he deemed "unsanctioned". He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus, aṣ-Ṣāliḥ ʾIsmaʿīl (@jackson1996). This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt (@salahi2016). Like *al-Māwardī*, *as-Salām* was a world renowned scholar of *fatāwa* (sg. fatwa, islamic legal opinion). Indeed, *as-Salām* was so respected, islamic jurists like *al-Ḥāfiẓ al-Munḏirī* stopped giving *fatāwa* stating that "[i]t does not behove any jurist to give a *fatwa* where *ʿIzz ad-Dīn* [*Ibn ʿAbd as-Salām*] happens to be present" (@salahi2016). Both *Ibn ʿAbd as-Salām* and *al-Māwardī* were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to respected islamic governments of their time (@jackson1996), another factor which may have attributed to the grouping of these authors in the same cluster.
 
-TODO: DMGize, mark citations
+*Ǧalāl ad-Dīn as-Suyūṭī* was born in Cario, Eygpt in the year 849 AH (@eb_alsuyuti) making his work the most recent amongst the cluster. Like most authors in the cluster he was an islamic jurist from the school of *aš-Šāfiʿī*. He was acknowledged as one of the more recent authorities of the *šāfiʿī* school whose degree of *iǧtihād* was accepted by most (@mic_alsuyuti). *As-Suyūṭī* lacked a particular interest in islamic law and was not known to be a head advisor for any islamic governments like both *Ibn ʿAbd as-Salām* and *al-Māwardī*. Although his father being a judge of an islamic state may have influenced any emphasis on (islamic) law within his writings and thus placing him within this cluster (@eb_alsuyuti). Unlike the other authors, *as-Suyūṭī* also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from the *šāfiʿī* school of thought. *As-Suyūṭī*'s interest in the *ḥanafī* jurisprudence may account for the inclusion of *as-Samarqandī* in the cluster. 
 
-Jalal al-Din al-Suyuti was born in Cario, Eygpt in the year 849AH (al-Suyuti, 2007) making his work the most recent amongst the cluster. Like most authors in the cluster he was a islamic jurist from the school of šāfiʿī. He was acknowledged as one of the more recent authority of the šāfiʿī school whose degree of ijthad was accepted by most(Meri,2005). Jalal al-Din al-Suyuti lacked a particular interest in islamic law and was not known to be a head advisor for any Islamic governments like both Ibn 'Abd al-Salam and *al-Māwardī*. Although his father being a judge of a islamic state may have influenced any emphasis on law(islamic) within his writings and thus placing him within this cluster.(al-suyuti,2007) Unlike the other authors, al-Suyuti also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from šāfiʿī school of thought. Al-Suyuti's interest in the *ḥanafī* jurisprudence may account for the inclusion of Abu al-Layth Al Samarqandi in our cluster. 
+*Abū al-Layṯ as-Samarqandī*, author of *baḥr al-ʿulūm* was the single author in the cluster from the school of *al-Ḥanafī*. Apart from his jurisprudence another outlying factor for *as-Samarqandī* was his geographical location and time period. He was born in Afghanistan during 373 AH making him the oldest exegete in this cluster (@wheeler2002 [p. 337]). Since his worked dated back so far we were unable to find much information in regards to his lifestyle or any other factors that may have attributed to his placing in this cluster. We were however able to compile a few specific features of his exegesis. In his work on the Quran *as-Samarqandī* was known to relate the stories of *ṣaḥāba* and other *ḥadīṯ* from people not proven to be entirely reliable. He was also known for his lack of interest in the various methods of recitation (*qirāʾāt*; @wikipedia_listofairlinecodes). Unfortunately, due to lack of information on *as-Samarqandī* we were unable to pinpoint a specific factor that attributed to his grouping in this cluster, for now he remains an outlier.
 
-TODO: DMGize, mark citations
+4 Conclusion
 
-Abu al-Layth al-Samarqandi author of Bahr Ul ‘Ulum was the single author in the cluster from the school of ḥanafī. Apart from his jurisprudence another outlying factor for al-Samaraqandi was his geographical location and time period. He was born in Afghanistan during 373AH making him the oldest exegete in this cluster. (wheeler, 2002) Since his worked dated back so far we were unable to find much information in regards to his lifestyle or any other factors that may have attributed to his placing in this cluster although, however we were able to compile a few specific features of his exegesis. In his work of the Quran al-samarqandi was known to relate the stories of sahabah and other hadiths from people not proven to be 100% reliable. He was also known for his lack of interest in the various methods of recitation (Qira'at).(“Liste..” 2002) Unfortunately, due to lack of information on Al Samarqandi we were unable to pinpoint a specific factor that attributed to his grouping in this cluster, for now he remains an outlier.
+From the results of the study, we cannot definitively state that focusing on certain aspects of the Quran is determined principally by any of the factors mentioned at the beginning of the paper (chronology, geography, dogma). However, we believe that examination of *sūra* and *āyā* preference from Quranic exegetes deserves further exploration.
 
-TODO: DMGize, mark citations
-
-From the results of the study, we cannot definitively state that focusing on certain aspects of the Quran is determined principally by any of the factors mentioned at the beginning of the paper (chronology, geography, dogma). However, we believe that examination of surah and ayah preference from Quranic exegetes deserves further exploration.
-
-# 4 References
+# 5 References
 
 \singlespacing
